--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ body {
     <form id="formOne">
       <div class="form-group">
         <label for="sentence">Input the sentence you would like to be incrypted:</label>
-        <input type="text" name="sentence" id="sentence">
+        <input type="text" name="sentence" id="sentence" class="form-control">
       </div>
       <button type="submit" class="btn btn-danger">~ Encrypt my sentence ~</button>
       <button type="reset" class="btn btn-danger">Reset form</button>
     </form>
-    
+
   </div>
 </body>
 </html>
